# cmaketips

./: README.md  cmaketips.md
r1/: CMakeLists.txt
r2/: CMakeLists.txt
r3/: CMakeLists.txt
r4/: CMakeLists.txt
valgrind-test/: CMakeLists.txt  leaky_implementation.cpp  test.cpp
